--- a/doc/Semesterbericht1/Literatur2.bib
+++ b/doc/Semesterbericht1/Literatur2.bib
@@ -1,50 +1,5 @@
 ﻿% This file was created with Citavi 6.17.0.0
 
-@article{.,
- author = {{John Hooker}},
- title = {Optimization Models for Fairness},
- url = {https://johnhooker.tepper.cmu.edu/fairnessFITmonash.pdf},
- urldate = {12.10.2023},
- volume = {May 2014},
- file = {John:Attachments/John.pdf:application/pdf}
-}
-
-
-@book{.2020,
- author = {Cornelio, Cristina and Pini, Maria Silvia and Rossi, Francesca and Venable, Kristen Brent},
- year = {2020},
- title = {Sequential Voting in Multi-agent Soft Constraint Aggregation},
- url = {https://www.ifaamas.org/proceedings/aamas2020/pdfs/p2131.pdf},
- file = {Sequential Voting in Multi-agent Soft 2020:Attachments/Sequential Voting in Multi-agent Soft 2020.pdf:application/pdf}
-}
-
-
-@book{.2022,
- author = {Ek, Alexander Johan Philippe},
- year = {2022},
- title = {High-Level Modelling and Solving for Online, Real-Time, and Multiagent Combinatorial Optimisation},
- url = {https://bridges.monash.edu/articles/thesis/high-level_modelling_and_solving_for_online_real-time_and_multiagent_combinatorial_optimisation/21588144},
- file = {High-Level Modelling and Solving for Online Real-Time an:Attachments/High-Level Modelling and Solving for Online Real-Time an.pdf:application/pdf}
-}
-
-
-@book{.b,
- author = {Kubiak, Wieslaw},
- title = {Proportional Optimization and Fairness},
- publisher = {{Scholars Portal}},
- isbn = {978-0-387-87718-1}
-}
-
-
-@article{.c,
- author = {Berkes, Fikret},
- title = {Local-level management and the commons problem: A comparative study of Turkish coastal fisheries},
- url = {https://www.sciencedirect.com/sdfe/pdf/download/eid/1-s2.0-0308597X86900540/first-page-pdf},
- urldate = {30.12.2023},
- file = {first-page-pdf:Attachments/first-page-pdf.pdf:application/pdf}
-}
-
-
 @article{Ala.2021,
  abstract = {Effective appointment scheduling (EAS) is essential for the quality and patient satisfaction in hospital management. Healthcare schedulers typically refer patients to a suitable period of service before the admission call closes. The appointment date can no longer be adjusted. This research presents the whale optimization algorithm (WOA) based on the Pareto archive and NSGA-II algorithm to solve the appointment scheduling model by considering the simulation approach. Based on these two algorithms, this paper has addressed the multi-criteria method in appointment scheduling. This paper computes WOA and NSGA with various hypotheses to meet the analysis and different factors related to patients in the hospital. In the last part of the model, this paper has analyzed NSGA and WOA with three cases. Fairness policy first come first serve (FCFS) considers the most priority factor to obtain from figure to strategies optimized solution for best satisfaction results. In the proposed NSGA, the FCFS approach and the WOA approach are contrasted. Numerical results indicate that both the FCFS and WOA approaches outperform the strategy optimized by the proposed algorithm.},
  author = {Ala, Ali and Alsaadi, Fawaz E. and Ahmadi, Mohsen and Mirjalili, Seyedali},
@@ -58,6 +13,24 @@
  journal = {Scientific reports},
  doi = {10.1038/s41598-021-98851-7},
  file = {Optimization of an appointment scheduling problem for he:Attachments/Optimization of an appointment scheduling problem for he.pdf:application/pdf}
+}
+
+
+@book{Albrecht.2024,
+ author = {Albrecht, Stefano V. and Filippos, Christianos and Sch{\"a}fer, Lukas},
+ year = {2024},
+ title = {Multi-Agent Reinforcement Learning: Foundations and Modern Approaches},
+ publisher = {{MIT Press}},
+ file = {marl-book:Attachments/marl-book.pdf:application/pdf}
+}
+
+
+@article{Berkes,
+ author = {Berkes, Fikret},
+ title = {Local-level management and the commons problem: A comparative study of Turkish coastal fisheries},
+ url = {https://www.sciencedirect.com/sdfe/pdf/download/eid/1-s2.0-0308597X86900540/first-page-pdf},
+ urldate = {30.12.2023},
+ file = {first-page-pdf:Attachments/first-page-pdf.pdf:application/pdf}
 }
 
 
@@ -103,12 +76,32 @@
 }
 
 
-@misc{Bouveret.11222023,
+@misc{Bouveret,
  author = {Bouveret, Sylvain and Lang, J{\'e}r{\^o}me},
  year = {11/22/2023},
  title = {View of Efficiency and Envy-freeness in Fair Division of Indivisible Goods: Logical Representation and Complexity},
  url = {https://www.jair.org/index.php/jair/article/view/10555/25267},
  urldate = {11/22/2023}
+}
+
+
+@article{Brandt,
+ author = {Brandt, Felix and Conitzer, Vincent and Endriss, Ulle and Lang, Jerome and Procaccia, Ariel D.},
+ title = {Handbook of Computational Social Choice},
+ file = {comsoc:Attachments/comsoc.pdf:application/pdf}
+}
+
+
+@article{Cappelen.2017,
+ author = {Cappelen, Alexander W. and Tungodden, Bertil},
+ year = {2017},
+ title = {Fairness and the proportionality principle},
+ pages = {709--719},
+ volume = {49},
+ number = {3-4},
+ issn = {0176-1714},
+ journal = {Social Choice and Welfare},
+ doi = {10.1007/s00355-016-1016-6}
 }
 
 
@@ -142,6 +135,24 @@
 }
 
 
+@book{Cornelio,
+ author = {Cornelio, Cristina and Pini, Maria Silvia and Rossi, Francesca and Venable, Kristen Brent},
+ year = {2020},
+ title = {Sequential Voting in Multi-agent Soft Constraint Aggregation},
+ url = {https://www.ifaamas.org/proceedings/aamas2020/pdfs/p2131.pdf},
+ file = {Sequential Voting in Multi-agent Soft 2020:Attachments/Sequential Voting in Multi-agent Soft 2020.pdf:application/pdf}
+}
+
+
+@book{Ek,
+ author = {Ek, Alexander Johan Philippe},
+ year = {2022},
+ title = {High-Level Modelling and Solving for Online, Real-Time, and Multiagent Combinatorial Optimisation},
+ url = {https://bridges.monash.edu/articles/thesis/high-level_modelling_and_solving_for_online_real-time_and_multiagent_combinatorial_optimisation/21588144},
+ file = {High-Level Modelling and Solving for Online Real-Time an:Attachments/High-Level Modelling and Solving for Online Real-Time an.pdf:application/pdf}
+}
+
+
 @article{Elokda.2023,
  abstract = {This paper presents karma mechanisms, a novel approach to the repeated allocation of a scarce resource among competing agents over an infinite time. Examples include deciding which ride hailing trip requests to serve during peak demand, granting the right of way in intersections or lane mergers, or admitting internet content to a regulated fast channel. We study a simplified yet insightful formulation of these problems where at every instant two agents from a large population get randomly matched to compete over the resource. The intuitive interpretation of a karma mechanism is ``If I give in now, I will be rewarded in the future.'' Agents compete in an auction-like setting where they bid units of karma, which circulates directly among them and is self-contained in the system. We demonstrate that this allows a society of self-interested agents to achieve high levels of efficiency without resorting to a (possibly problematic) monetary pricing of the resource. We model karma mechanisms as dynamic population games and guarantee the existence of a stationary Nash equilibrium. We then analyze the performance at the stationary Nash equilibrium numerically. For the case of homogeneous agents, we compare different mechanism design choices, showing that it is possible to achieve an efficient and ex-post fair allocation when the agents are future aware. Finally, we test the robustness against agent heterogeneity and propose remedies to some of the observed phenomena via karma redistribution.},
  author = {Elokda, Ezzat and Bolognani, Saverio and Censi, Andrea and D{\"o}rfler, Florian and Frazzoli, Emilio},
@@ -156,13 +167,6 @@
 }
 
 
-@article{FelixBrandtVincentConitzerUlleEndrissJeromeLangandArielD.Procaccia.,
- author = {{Felix Brandt, Vincent Conitzer, Ulle Endriss, Jerome Lang, and Ariel D. Procaccia}},
- title = {Handbook of Computational Social Choice},
- file = {comsoc:Attachments/comsoc.pdf:application/pdf}
-}
-
-
 @misc{Foulds.7222018,
  abstract = {We propose definitions of fairness in machine learning and artificial intelligence systems that are informed by the framework of intersectionality, a critical lens arising from the Humanities literature which analyzes how interlocking systems of power and oppression affect individuals along overlapping dimensions including gender, race, sexual orientation, class, and disability. We show that our criteria behave sensibly for any subset of the set of protected attributes, and we prove economic, privacy, and generalization guarantees. We provide a learning algorithm which respects our intersectional fairness criteria. Case studies on census data and the COMPAS criminal recidivism dataset demonstrate the utility of our methods.},
  author = {Foulds, James and Islam, Rashidul and Keya, Kamrun Naher and Pan, Shimei},
@@ -171,6 +175,54 @@
  url = {https://arxiv.org/pdf/1807.08362.pdf},
  keywords = {Computer Science - Computers and Society;Computer Science - Learning;Computers and Society (cs.CY);Machine Learning (cs.LG);Machine Learning (stat.ML);Statistics - Machine Learning},
  file = {An Intersectional Definition of Fairness:Attachments/An Intersectional Definition of Fairness.pdf:application/pdf}
+}
+
+
+@article{Hooker,
+ author = {{John Hooker}},
+ title = {Optimization Models for Fairness},
+ url = {https://johnhooker.tepper.cmu.edu/fairnessFITmonash.pdf},
+ urldate = {12.10.2023},
+ volume = {May 2014},
+ file = {John:Attachments/John.pdf:application/pdf}
+}
+
+
+@article{Hotz,
+ author = {Hotz, Heiko},
+ title = {A Short Introduction to Game Theory},
+ url = {https://www.theorie.physik.uni-muenchen.de/lsfrey/teaching/archiv/sose_06/softmatter/talks/Heiko_Hotz-Spieltheorie-Handout.pdf},
+ urldate = {14.02.2024},
+ file = {Heiko{\_}Hotz-Spieltheorie-Handout:Attachments/Heiko{\_}Hotz-Spieltheorie-Handout.pdf:application/pdf}
+}
+
+
+@book{Hutchison.2006,
+ year = {2006},
+ title = {Cooperative Information Agents X},
+ address = {Berlin, Heidelberg},
+ publisher = {{Springer Berlin Heidelberg}},
+ isbn = {978-3-540-38569-1},
+ series = {Lecture Notes in Computer Science},
+ editor = {Hutchison, David and Kanade, Takeo and Kittler, Josef and Kleinberg, Jon M. and Mattern, Friedemann and Mitchell, John C. and Naor, Moni and Nierstrasz, Oscar and {Pandu Rangan}, C. and Steffen, Bernhard and Sudan, Madhu and Terzopoulos, Demetri and Tygar, Dough and Vardi, Moshe Y. and Weikum, Gerhard and Klusch, Matthias and Rovatsos, Michael and Payne, Terry R.},
+ doi = {10.1007/11839354}
+}
+
+
+@misc{Janko.23.12.2023,
+ abstract = {A cake allocation is called *strongly-proportional* if it allocates each agent a piece worth for them strictly more than their fair share of 1/n the total cake value. It is called *connected* if it allocates each agent a connected piece. We present a necessary and sufficient condition for the existence of a strongly-proportional connected cake-allocation among agents with strictly positive valuations.},
+ author = {Jank{\'o}, Zsuzsanna and Jo{\'o}, Attila and Segal-Halevi, Erel},
+ date = {23.12.2023},
+ title = {On Connected Strongly-Proportional Cake-Cutting},
+ url = {http://arxiv.org/pdf/2312.15326v1}
+}
+
+
+@book{Kubiak,
+ author = {Kubiak, Wieslaw},
+ title = {Proportional Optimization and Fairness},
+ publisher = {{Scholars Portal}},
+ isbn = {978-0-387-87718-1}
 }
 
 
@@ -184,6 +236,50 @@
  editor = {Markham, Annette},
  institution = {{ACM Special Interest Group on Artificial Intelligence}},
  doi = {10.1145/3375627}
+}
+
+
+@incollection{Matt.2006,
+ author = {Matt, P.-A. and Toni, F.},
+ title = {Egalitarian Allocations of Indivisible Resources: Theory and Computation},
+ pages = {243--257},
+ volume = {4149},
+ publisher = {{Springer Berlin Heidelberg}},
+ isbn = {978-3-540-38569-1},
+ series = {Lecture Notes in Computer Science},
+ editor = {Hutchison, David and Kanade, Takeo and Kittler, Josef and Kleinberg, Jon M. and Mattern, Friedemann and Mitchell, John C. and Naor, Moni and Nierstrasz, Oscar and {Pandu Rangan}, C. and Steffen, Bernhard and Sudan, Madhu and Terzopoulos, Demetri and Tygar, Dough and Vardi, Moshe Y. and Weikum, Gerhard and Klusch, Matthias and Rovatsos, Michael and Payne, Terry R.},
+ booktitle = {Cooperative Information Agents X},
+ year = {2006},
+ address = {Berlin, Heidelberg},
+ doi = {10.1007/11839354{\textunderscore }18}
+}
+
+
+@incollection{Meseguer.2006,
+ author = {Meseguer, Pedro and Rossi, Francesca and Schiex, Thomas},
+ title = {Soft Constraints},
+ pages = {281--328},
+ volume = {2},
+ publisher = {Elsevier},
+ isbn = {9780444527264},
+ series = {Foundations of Artificial Intelligence},
+ editor = {Rossi, Francesca and {van Beek}, Peter and Walsh, Toby},
+ booktitle = {Handbook of Constraint Programming},
+ year = {2006},
+ doi = {10.1016/S1574-6526(06)80013-1}
+}
+
+
+@article{Mitchell.2021,
+ author = {Mitchell, Shira and Potash, Eric and Barocas, Solon and D'Amour, Alexander and Lum, Kristian},
+ year = {2021},
+ title = {Algorithmic Fairness: Choices, Assumptions, and Definitions},
+ pages = {141--163},
+ volume = {8},
+ number = {1},
+ issn = {2326-8298},
+ journal = {Annual Review of Statistics and Its Application},
+ doi = {10.1146/annurev-statistics-042720-125902}
 }
 
 
@@ -202,6 +298,38 @@
  address = {Cham},
  doi = {10.1007/978-3-031-08011-1{\textunderscore }22},
  file = {Pesant, Quimper et al. 2022 - Practically Uniform Solution Sampling:Attachments/Pesant, Quimper et al. 2022 - Practically Uniform Solution Sampling.pdf:application/pdf}
+}
+
+
+@misc{Plaut.15.07.2017,
+ abstract = {The goal of fair division is to distribute resources among competing players in a {\textquotedbl}fair{\textquotedbl} way. Envy-freeness is the most extensively studied fairness notion in fair division. Envy-free allocations do not always exist with indivisible goods, motivating the study of relaxed versions of envy-freeness. We study the envy-freeness up to any good (EFX) property, which states that no player prefers the bundle of another player following the removal of any single good, and prove the first general results about this property. We use the leximin solution to show existence of EFX allocations in several contexts, sometimes in conjunction with Pareto optimality. For two players with valuations obeying a mild assumption, one of these results provides stronger guarantees than the currently deployed algorithm on Spliddit, a popular fair division website. Unfortunately, finding the leximin solution can require exponential time. We show that this is necessary by proving an exponential lower bound on the number of value queries needed to identify an EFX allocation, even for two players with identical valuations. We consider both additive and more general valuations, and our work suggests that there is a rich landscape of problems to explore in the fair division of indivisible goods with different classes of player valuations.},
+ author = {Plaut, Benjamin and Roughgarden, Tim},
+ date = {15.07.2017},
+ title = {Almost Envy-Freeness with General Valuations},
+ url = {http://arxiv.org/pdf/1707.04769v3}
+}
+
+
+@book{Rossi,
+ year = {2006},
+ title = {Handbook of Constraint Programming},
+ publisher = {Elsevier},
+ isbn = {9780444527264},
+ series = {Foundations of Artificial Intelligence},
+ editor = {Rossi, Francesca and {van Beek}, Peter and Walsh, Toby}
+}
+
+
+@article{Savulescu.2020,
+ abstract = {There are no egalitarians in a pandemic. The scale of the challenge for health systems and public policy means that there is an ineluctable need to prioritize the needs of the many. It is impossible to treat all citizens equally, and a failure to carefully consider the consequences of actions could lead to massive preventable loss of life. In a pandemic there is a strong ethical need to consider how to do most good overall. Utilitarianism is an influential moral theory that states that the right action is the action that is expected to produce the greatest good. It offers clear operationalizable principles. In this paper we provide a summary of how utilitarianism could inform two challenging questions that have been important in the early phase of the pandemic: (a) Triage: which patients should receive access to a ventilator if there is overwhelming demand outstripping supply? (b) Lockdown: how should countries decide when to implement stringent social restrictions, balancing preventing deaths from COVID-19 with causing deaths and reductions in well-being from other causes? Our aim is not to argue that utilitarianism is the only relevant ethical theory, or in favour of a purely utilitarian approach. However, clearly considering which options will do the most good overall will help societies identify and consider the necessary cost of other values. Societies may choose either to embrace or not to embrace the utilitarian course, but with a clear understanding of the values involved and the price they are willing to pay.},
+ author = {Savulescu, Julian and Persson, Ingmar and Wilkinson, Dominic},
+ year = {2020},
+ title = {Utilitarianism and the pandemic},
+ pages = {620--632},
+ volume = {34},
+ number = {6},
+ journal = {Bioethics},
+ doi = {10.1111/bioe.12771}
 }
 
 
